Revert "React router dom is created"
This reverts commit fa134505930cb21d826b19573e5b6efd8cbfc6ff.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "App.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel hello.html",
-    "build": "parcel hello.html"
+    "start":"parcel hello.html",
+    "build":"parcel hello.html"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-dom": "^18.3.1"
   }
 }
