--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "learnreact",
   "version": "1.0.0",
-  "description": "",
   "main": "App.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +18,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
-  }
+  },
+  "description": ""
 }
